# nirscloud

./: .gitignore  pyproject.toml
nirscloud_julia/: __init__.py  alarm_settings_descr.json  async_hdfs.py  calibration_model.py  dual_quaternion.py  histos.py  mpl_marker.py  nirs_bokeh_theme.yml  nirscloud_data.py  nirscloud_hdfs.py  nirscloud_mongo.py  nirscloud_raw.py  nirscloud_redcap.py  nirscloud_redundancies.py  nirscloud_simple.py  nirscloud_util_julia.py  numerics_descr.json  settings_descr.json  typed_redcap.py  visualization.py  webhdfs.py  webhdfs_fs.py  webhdfs_schemas.py
