[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nirscloud_julia"
authors = [{name = "Julia Tatz", email = "julia.tatz@childrens.harvard.edu"}]
requires-python = ">=3.7.1"
dynamic = ["version", "description"]
dependencies = [
    "numpy~=1.21",
    "scipy~=1.6",
    "numpy-quaternion>=2021.7",
    "xarray>=0.19",
    "pymongo>=3.0",
    "matplotlib~=3.4",
    "pandas~=1.2",
    "zarr>=2.8",
    "requests~=2.26",
    "hdfs~=2.6",
    "requests-gssapi~=1.2",
    "httpx_gssapi~=0.1.7",
    "pyarrow>=4",
]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
