[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nirscloud_julia"
authors = [{name = "Julia Tatz", email = "julia.tatz@childrens.harvard.edu"}]
requires-python = ">=3.7.1"
dynamic = ["version"]
dependencies = [
    "numpy~=1.21",
    "xarray>=0.19",
    "pymongo>=3.0",
    "pandas~=1.2",
    "zarr>=2.8",
    "requests~=2.26",
    "hdfs~=2.6",
    "httpx[http2]",
    "requests-gssapi~=1.2",
    "httpx_gssapi~=0.1.7",
    "pyarrow>=4",
]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"

[tool.setuptools_scm]
write_to = "nirscloud_julia/_version.py"
