[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nirscloud_julia"
authors = [{name = "Julia Tatz", email = "julia.tatz@childrens.harvard.edu"}]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "typing_extensions>=4.3.0",
    "numpy>=1.23",
    "xarray>=0.19",
    "pymongo>=3.12",
    "pandas>=1.2",
    "zarr>=2.8",
    "httpx[http2]",
    "httpx_gssapi>=0.1.7",
    "pyarrow>=12",
    "fsspec",
]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"

[tool.setuptools_scm]
write_to = "nirscloud_julia/_version.py"

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.8.0",
    "mypy>=0.982",
    "isort>=5.10.1",
]
